force-app/main/default/objects/FieloPLT__Transaction__c/FieloPLT__Transaction__c.object-meta.xml
<CustomObject>
    <description>Transactions are the result of performing specific activities, which in exchange grant Points, Badges or Rewards to Members.</description>
    <label>Transaction</label>
    <nameField>
        <displayFormat>T-{0000000}</displayFormat>
        <label>Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>