force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__Action__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Action__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Automatically generated related Action.</description>
    <inlineHelpText>Related Action.</inlineHelpText>
    <label>Action</label>
    <referenceTo>FieloPLT__Action__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>