force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__ChallengeMember__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__ChallengeMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Challenge Member</label>
    <referenceTo>FieloPLT__ChallengeMember__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>