force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__Date__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Date__c</fullName>
    <defaultValue>now()</defaultValue>
    <description>Transaction date and time.</description>
    <inlineHelpText>Choose Transaction date and time.</inlineHelpText>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>