force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__Event__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It shows the Event which generated the Transaction.</description>
    <inlineHelpText>Event which generated the Transaction.</inlineHelpText>
    <label>Event</label>
    <referenceTo>FieloPLT__Event__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>