force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__IsAdjust__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsAdjust__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, it means that the Transaction is an Adjust Transaction, created as a result of adjusting a previously generated Transaction.</description>
    <inlineHelpText>If ticked, the Transaction is an Adjust Transaction, created as a result of adjusting a previously generated Transaction.</inlineHelpText>
    <label>Adjust</label>
    <type>Checkbox</type>
</CustomField>