force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__IsProcessed__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, he Transaction has been processed by the Action (Rule) Engine.</description>
    <inlineHelpText>If ticked, the Transaction has been processed by the Action (Rule) Engine.</inlineHelpText>
    <label>Processed</label>
    <type>Checkbox</type>
</CustomField>