force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__IsReverted__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__IsReverted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If ticked, Transaction has been reverted by the Action (Rule) Engine.</description>
    <inlineHelpText>If ticked, Transaction has been reverted by the Action (Rule) Engine.</inlineHelpText>
    <label>Reverted</label>
    <type>Checkbox</type>
</CustomField>