force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>It shows the Member who generated the Transaction.</description>
    <inlineHelpText>Enter the Member who generated the Transaction.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>