force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__PointCost__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__PointCost__c</fullName>
    <description>It shows the result of &quot;Points&quot; from a Transaction multiplied by the &quot;Point Cost&quot; established in &quot;Program&quot;.</description>
    <inlineHelpText>Result of Transaction &quot;Points&quot; multiplied by the &quot;Point Cost&quot; established in &quot;Program&quot;.</inlineHelpText>
    <label>Point Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>