force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__Points__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Points__c</fullName>
    <description>Transaction Points.</description>
    <inlineHelpText>Enter the number of Transaction Points.</inlineHelpText>
    <label>Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>