force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__RevertedTransaction__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RevertedTransaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It shows a Transaction that was reverted.</description>
    <inlineHelpText>Transaction that was reverted.</inlineHelpText>
    <label>Reverted Transaction</label>
    <referenceTo>FieloPLT__Transaction__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>