force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__Reward__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>It shows the Reward related to a Transaction.</description>
    <inlineHelpText>Reward related to a Transaction.</inlineHelpText>
    <label>Reward</label>
    <referenceTo>FieloPLT__Reward__c</referenceTo>
    <relationshipLabel>Transactions</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>