force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__RewardingSummary__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__RewardingSummary__c</fullName>
    <label>Rewarding Summary</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>