force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__SkipEngine__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__SkipEngine__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When ticked, Action (Rule) Engine is skipped and Members obtain Points from Transactions. This field is automatically completed when a Reverted Transaction is chosen.</description>
    <inlineHelpText>When ticked, Action (Rule) Engine is skipped and Members automatically obtain Points from Transactions.</inlineHelpText>
    <label>Skip Engine</label>
    <type>Checkbox</type>
</CustomField>