force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Type__c</fullName>
    <description>Different kind of Transactions which depend on their purpose: Adjustment, Challenge Reward, Expiration and Reversion</description>
    <inlineHelpText>Transaction type (Adjustment, Challenge Reward, Expiration and Reversion).</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment</fullName>
            </value>
            <value>
                <fullName>Challenge Reward</fullName>
            </value>
            <value>
                <fullName>Expiration</fullName>
            </value>
            <value>
                <fullName>Reversion</fullName>
            </value>
            <value>
                <fullName>Betcoins Extra - Cortesia</fullName>
            </value>
            <value>
                <fullName>Youbet Extra - Fornecedor - Elegível H1 &gt;= 80%</fullName>
            </value>
            <value>
                <fullName>Elegibilidade - % AM YTD - AGO 18 &gt;= 100% - DISTR</fullName>
            </value>
            <value>
                <fullName>Elegibilidade - % AM YTD - SET 18 &gt;= 100% - DISTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>