force-app/main/default/objects/FieloPLT__Transaction__c/fields/FieloPLT__Value__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Value__c</fullName>
    <defaultValue>0</defaultValue>
    <description>It shows the Transaction purchase value.</description>
    <inlineHelpText>Enter Transaction purchase value.</inlineHelpText>
    <label>Value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>