force-app/main/default/objects/FieloPLT__Transaction__c/fields/V_Descricao__c.field-meta.xml
<CustomField>
    <fullName>V_Descricao__c</fullName>
    <description>Descrição do motivo da transação</description>
    <inlineHelpText>Descrição do motivo da transação</inlineHelpText>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>