force-app/main/default/objects/FieloPLT__Transaction__c/fields/V_MetaDoParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_MetaDoParticipante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nova estrutura - Relaciona o registro de ano fiscal do objeto Meta do Participante à transação que gerou pontos.</description>
    <inlineHelpText>Relaciona o registro de ano fiscal do objeto Meta do Participante à transação que gerou pontos.</inlineHelpText>
    <label>Meta do Participante</label>
    <referenceTo>VN_MetaParticipante__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>Transa_es</relationshipName>
    <type>Lookup</type>
</CustomField>