force-app/main/default/objects/FieloPLT__Transaction__c/fields/V_MetaParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_MetaParticipante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relaciona o registro de ano fiscal do objeto Meta do Participante à transação que gerou pontos.</description>
    <inlineHelpText>Relaciona o registro de ano fiscal do objeto Meta do Participante à transação que gerou pontos.</inlineHelpText>
    <label>Meta do Participante OLD</label>
    <referenceTo>VN_MetasParticipantes__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>