force-app/main/default/objects/FieloPLT__Transaction__c/fields/V_ResultadoParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_ResultadoParticipante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo utilizado em Actions.</description>
    <inlineHelpText>Campo utilizado em Actions.</inlineHelpText>
    <label>Resultado do Participante</label>
    <referenceTo>VN_Resultado__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>Transacoes</relationshipName>
    <type>Lookup</type>
</CustomField>