force-app/main/default/objects/FieloPLT__Transaction__c/fields/V_Sumarizador__c.field-meta.xml
<CustomField>
    <fullName>V_Sumarizador__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relaciona o registro de ano fiscal do objeto Sumarizador à transação que gerou pontos.</description>
    <inlineHelpText>Relaciona o registro de ano fiscal do objeto Sumarizador à transação que gerou pontos.</inlineHelpText>
    <label>Sumarizador</label>
    <referenceTo>VN_Sumarizador__c</referenceTo>
    <relationshipLabel>Transações</relationshipLabel>
    <relationshipName>Transa_es</relationshipName>
    <type>Lookup</type>
</CustomField>