force-app/main/default/objects/FieloPLT__Transaction__c/validationRules/FieloPLT__ValidateDateTime.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ValidateDateTime</fullName>
    <active>true</active>
    <description>Transaction date and time must be valid.</description>
    <errorConditionFormula>ISNULL(FieloPLT__Date__c)</errorConditionFormula>
    <errorDisplayField>FieloPLT__Date__c</errorDisplayField>
    <errorMessage>Transaction date and time must be valid.</errorMessage>
</ValidationRule>