force-app/main/default/objects/FieloPLT__Transaction__c/validationRules/FieloPLT__ValidateMember.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ValidateMember</fullName>
    <active>true</active>
    <description>A Member must be selected.</description>
    <errorConditionFormula>(FieloPLT__Member__c == null)</errorConditionFormula>
    <errorDisplayField>FieloPLT__Member__c</errorDisplayField>
    <errorMessage>A Member must be selected.</errorMessage>
</ValidationRule>