force-app/main/default/objects/FieloPLT__Transaction__c/validationRules/FieloPLT__ValidateProcessedPoints.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ValidateProcessedPoints</fullName>
    <active>false</active>
    <description>A processed Transaction cannot have null &quot;Points&quot;.</description>
    <errorConditionFormula>FieloPLT__IsProcessed__c &amp;&amp; ISNULL(FieloPLT__Points__c)</errorConditionFormula>
    <errorDisplayField>FieloPLT__Points__c</errorDisplayField>
    <errorMessage>A processed Transaction cannot have null &quot;Points&quot;.</errorMessage>
</ValidationRule>